--- a/.github/workflows/go-ci-cd.yml
+++ b/.github/workflows/go-ci-cd.yml
@@ -2,14 +2,16 @@ name: Go CI/CD Pipeline
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "main", "feature/ci-cd-setup" ]
     tags: [ "v*.*.*" ]
   pull_request:
     branches: [ "main" ]
 
+env:
+  IMAGE_NAME: "my-go-app"
+
 jobs:
   test:
-    name: Test
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -19,28 +21,21 @@ jobs:
         with:
           go-version: '1.21'
           
-      - name: Build
-        run: go build -v ./...
-        
-      - name: Test
-        run: go test -v ./...
-        
-      - name: Run linter
-        uses: golangci/golangci-lint-action@v3
-        with:
-          version: latest
+      - name: Run tests
+        run: |
+          go test -v ./...
 
   docker-publish:
     needs: test
+    if: startsWith(github.ref, 'refs/tags/v')
     runs-on: ubuntu-latest
-    if: startsWith(github.ref, 'refs/tags/')
     steps:
       - uses: actions/checkout@v3
       
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
           
-      - name: Login to DockerHub
+      - name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_HUB_USERNAME }}
@@ -57,7 +52,5 @@ jobs:
           context: .
           push: true
           tags: |
-            ${{ secrets.DOCKER_HUB_USERNAME }}/final-main:latest
-            ${{ secrets.DOCKER_HUB_USERNAME }}/final-main:${{ steps.version.outputs.version }}
-          build-args: |
-            VERSION=${{ steps.version.outputs.version }}
+            ${{ secrets.DOCKER_HUB_USERNAME }}/${{ env.IMAGE_NAME }}:latest
+            ${{ secrets.DOCKER_HUB_USERNAME }}/${{ env.IMAGE_NAME }}:${{ steps.version.outputs.version }}
