--- a/.github/workflows/go-ci-cd.yml
+++ b/.github/workflows/go-ci-cd.yml
@@ -21,15 +21,29 @@ jobs:
         with:
           go-version: '1.21'
           
+      - name: Run linters
+        run: |
+          echo "🔍 Running code analysis..."
+          go install github.com/golangci/golangci-lint/cmd/golangci-lint@latest
+          golangci-lint run ./... --timeout 3m
+          echo "✅ Linting completed successfully"
+          
       - name: Run tests
         run: |
+          echo "🧪 Running tests..."
           go test -v ./...
+          echo "✅ Tests passed"
 
   docker-publish:
     needs: test
     if: startsWith(github.ref, 'refs/tags/v')
     runs-on: ubuntu-latest
     steps:
+      - name: Print tag info
+        run: |
+          echo "🛠️ Triggered by tag: $GITHUB_REF"
+          echo "📦 Image name: ${{ env.IMAGE_NAME }}"
+          
       - uses: actions/checkout@v3
       
       - name: Set up Docker Buildx
@@ -40,11 +54,15 @@ jobs:
         with:
           username: ${{ secrets.DOCKER_HUB_USERNAME }}
           password: ${{ secrets.DOCKER_HUB_TOKEN }}
+        env:
+          DOCKERHUB_USERNAME: ${{ secrets.DOCKER_HUB_USERNAME }}
           
       - name: Extract version from tag
         id: version
         run: |
-          echo "version=${GITHUB_REF#refs/tags/v}" >> $GITHUB_OUTPUT
+          VERSION=${GITHUB_REF#refs/tags/v}
+          echo "✅ Detected version: $VERSION"
+          echo "version=$VERSION" >> $GITHUB_OUTPUT
           
       - name: Build and push
         uses: docker/build-push-action@v4
@@ -54,3 +72,15 @@ jobs:
           tags: |
             ${{ secrets.DOCKER_HUB_USERNAME }}/${{ env.IMAGE_NAME }}:latest
             ${{ secrets.DOCKER_HUB_USERNAME }}/${{ env.IMAGE_NAME }}:${{ steps.version.outputs.version }}
+          labels: |
+            org.opencontainers.image.version=${{ steps.version.outputs.version }}
+            org.opencontainers.image.source=$GITHUB_REPOSITORY
+          
+      - name: Verify push
+        run: |
+          echo "🎉 Successfully pushed Docker images:"
+          echo " - ${{ secrets.DOCKER_HUB_USERNAME }}/${{ env.IMAGE_NAME }}:latest"
+          echo " - ${{ secrets.DOCKER_HUB_USERNAME }}/${{ env.IMAGE_NAME }}:${{ steps.version.outputs.version }}"
+          echo "📌 Image labels:"
+          echo " - version=${{ steps.version.outputs.version }}"
+          echo " - source=$GITHUB_REPOSITORY"
