--- a/.github/workflows/go-ci-cd.yml
+++ b/.github/workflows/go-ci-cd.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@v4
         with:
-          go-version: '1.21'
+          go-version: '1.24'
 
       - name: Run linters
         run: |
@@ -27,9 +27,9 @@ jobs:
           go install github.com/golangci/golangci-lint/cmd/golangci-lint@latest
           go install github.com/gordonklaus/ineffassign@latest
 
-          echo "🛠️ Running static analysis..."
+          echo "Running static analysis..."
           ineffassign ./...
-          golangci-lint run ./... --timeout 3m --enable=govet,unused,staticcheck
+          golangci-lint run ./... --enable=govet,unused,staticcheck
           echo "Linting completed"
 
       - name: Run tests
