--- a/.github/workflows/go-ci-cd.yml
+++ b/.github/workflows/go-ci-cd.yml
@@ -47,11 +47,14 @@ jobs:
         run: |
           echo "Triggered by tag: $GITHUB_REF"
           echo "Image name: ${{ env.IMAGE_NAME }}"
+          echo "This job runs only when triggered by a version tag (v*.*.*)"
 
       - uses: actions/checkout@v3
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
+        with:
+          driver: docker-container
 
       - name: Login to Docker Hub
         uses: docker/login-action@v2
@@ -65,6 +68,7 @@ jobs:
           VERSION=${GITHUB_REF#refs/tags/v}
           echo "Detected version: $VERSION"
           echo "version=$VERSION" >> $GITHUB_OUTPUT
+          echo "Will build and push images with this version"
 
       - name: Build and push
         uses: docker/build-push-action@v4
@@ -76,13 +80,16 @@ jobs:
             ${{ secrets.DOCKER_HUB_USERNAME }}/${{ env.IMAGE_NAME }}:${{ steps.version.outputs.version }}
           labels: |
             org.opencontainers.image.version=${{ steps.version.outputs.version }}
-            org.opencontainers.image.source=$GITHUB_REPOSITORY
+            org.opencontainers.image.source=https://github.com/$GITHUB_REPOSITORY
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
 
       - name: Verify push
         run: |
-          echo " Successfully pushed Docker images:"
-          echo " - ${{ secrets.DOCKER_HUB_USERNAME }}/${{ env.IMAGE_NAME }}:latest"
-          echo " - ${{ secrets.DOCKER_HUB_USERNAME }}/${{ env.IMAGE_NAME }}:${{ steps.version.outputs.version }}"
-          echo " Image labels:"
-          echo " - version=${{ steps.version.outputs.version }}"
-          echo " - source=$GITHUB_REPOSITORY"
+          echo "Successfully pushed Docker images:"
+          echo "  - ${{ secrets.DOCKER_HUB_USERNAME }}/${{ env.IMAGE_NAME }}:latest"
+          echo "  - ${{ secrets.DOCKER_HUB_USERNAME }}/${{ env.IMAGE_NAME }}:${{ steps.version.outputs.version }}"
+          echo "Image metadata:"
+          echo "  - version: ${{ steps.version.outputs.version }}"
+          echo "  - source: https://github.com/$GITHUB_REPOSITORY"
+          echo "Docker publish completed successfully!"
