--- a/.github/workflows/go-ci-cd.yml
+++ b/.github/workflows/go-ci-cd.yml
@@ -2,7 +2,7 @@ name: Go CI/CD Pipeline
 
 on:
   push:
-    branches: [ "main", "feature/ci-cd-setup" ]
+    branches: [ "main" ]
     tags: [ "v*.*.*" ]
   pull_request:
     branches: [ "main" ]
@@ -23,38 +23,30 @@ jobs:
 
       - name: Run linters
         run: |
-          echo "Installing linters..."
           go install github.com/golangci/golangci-lint/cmd/golangci-lint@latest
-          go install github.com/gordonklaus/ineffassign@latest
-
-          echo "Running static analysis..."
-          ineffassign ./...
-          golangci-lint run ./... --enable=govet,unused,staticcheck
-          echo "Linting completed"
+          golangci-lint run ./...
 
       - name: Run tests
-        run: |
-          echo "Running tests..."
-          go test -v ./...
-          echo "Tests passed"
+        run: go test -v ./...
 
   docker-publish:
     needs: test
-    if: startsWith(github.ref, 'refs/tags/v')
+    if: ${{ startsWith(github.ref, 'refs/tags/v') }}
     runs-on: ubuntu-latest
+    
     steps:
-      - name: Print tag info
+      - name: Verify tag trigger
         run: |
-          echo "Triggered by tag: $GITHUB_REF"
-          echo "Image name: ${{ env.IMAGE_NAME }}"
-          echo "This job runs only when triggered by a version tag (v*.*.*)"
+          echo "✔ Job triggered by tag: $GITHUB_REF"
+          if [[ ! "$GITHUB_REF" =~ ^refs/tags/v[0-9]+\.[0-9]+\.[0-9]+$ ]]; then
+            echo "::error::Tag format incorrect. Expected vX.Y.Z"
+            exit 1
+          fi
 
       - uses: actions/checkout@v3
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
-        with:
-          driver: docker-container
 
       - name: Login to Docker Hub
         uses: docker/login-action@v2
@@ -66,9 +58,8 @@ jobs:
         id: version
         run: |
           VERSION=${GITHUB_REF#refs/tags/v}
-          echo "Detected version: $VERSION"
           echo "version=$VERSION" >> $GITHUB_OUTPUT
-          echo "Will build and push images with this version"
+          echo "✔ Extracted version: $VERSION"
 
       - name: Build and push
         uses: docker/build-push-action@v4
@@ -80,16 +71,11 @@ jobs:
             ${{ secrets.DOCKER_HUB_USERNAME }}/${{ env.IMAGE_NAME }}:${{ steps.version.outputs.version }}
           labels: |
             org.opencontainers.image.version=${{ steps.version.outputs.version }}
-            org.opencontainers.image.source=https://github.com/$GITHUB_REPOSITORY
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
+            org.opencontainers.image.source=$GITHUB_REPOSITORY
 
-      - name: Verify push
+      - name: Success message
         run: |
-          echo "Successfully pushed Docker images:"
-          echo "  - ${{ secrets.DOCKER_HUB_USERNAME }}/${{ env.IMAGE_NAME }}:latest"
-          echo "  - ${{ secrets.DOCKER_HUB_USERNAME }}/${{ env.IMAGE_NAME }}:${{ steps.version.outputs.version }}"
-          echo "Image metadata:"
-          echo "  - version: ${{ steps.version.outputs.version }}"
-          echo "  - source: https://github.com/$GITHUB_REPOSITORY"
-          echo "Docker publish completed successfully!"
+          echo "✔ Successfully published Docker images"
+          echo "Image: ${{ secrets.DOCKER_HUB_USERNAME }}/${{ env.IMAGE_NAME }}"
+          echo "Tags: latest, ${{ steps.version.outputs.version }}"
+          echo "View on Docker Hub: https://hub.docker.com/r/${{ secrets.DOCKER_HUB_USERNAME }}/${{ env.IMAGE_NAME }}/tags"
