--- a/.github/workflows/go-ci-cd.yml
+++ b/.github/workflows/go-ci-cd.yml
@@ -2,10 +2,10 @@ name: Go CI/CD Pipeline
 
 on:
   push:
-    branches: [ "main" ]
-    tags: [ "v*.*.*" ]
+    branches: ["main"]
+    tags: ["v*.*.*"]
   pull_request:
-    branches: [ "main" ]
+    branches: ["main"]
 
 env:
   IMAGE_NAME: "my-go-app"
@@ -47,12 +47,20 @@ jobs:
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
+        with:
+          driver: docker-container
+
+      - name: Debug Docker Hub credentials
+        run: |
+          echo "Docker Hub username: ${{ secrets.DOCKER_HUB_USERNAME }}"
+          echo "Token starts with: ${DOCKER_HUB_TOKEN:0:4}..."  # Проверка первых 4 символов токена
 
       - name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_HUB_USERNAME }}
           password: ${{ secrets.DOCKER_HUB_TOKEN }}
+          # Уберите ecr: auto если используете только Docker Hub
 
       - name: Extract version from tag
         id: version
@@ -71,11 +79,18 @@ jobs:
             ${{ secrets.DOCKER_HUB_USERNAME }}/${{ env.IMAGE_NAME }}:${{ steps.version.outputs.version }}
           labels: |
             org.opencontainers.image.version=${{ steps.version.outputs.version }}
-            org.opencontainers.image.source=$GITHUB_REPOSITORY
+            org.opencontainers.image.source=https://github.com/${{ github.repository }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
 
-      - name: Success message
+      - name: Verify published images
         run: |
-          echo "✔ Successfully published Docker images"
-          echo "Image: ${{ secrets.DOCKER_HUB_USERNAME }}/${{ env.IMAGE_NAME }}"
-          echo "Tags: latest, ${{ steps.version.outputs.version }}"
-          echo "View on Docker Hub: https://hub.docker.com/r/${{ secrets.DOCKER_HUB_USERNAME }}/${{ env.IMAGE_NAME }}/tags"
+          echo " Docker images published successfully!"
+          echo "--------------------------------------"
+          echo " Docker Hub User: ${{ secrets.DOCKER_HUB_USERNAME }}"
+          echo "🏷 Image Tags:"
+          echo "  - latest"
+          echo "  - ${{ steps.version.outputs.version }}"
+          echo ""
+          echo "View on Docker Hub:"
+          echo "https://hub.docker.com/r/${{ secrets.DOCKER_HUB_USERNAME }}/${{ env.IMAGE_NAME }}/tags"
